--- a/docs/option/02.md
+++ b/docs/option/02.md
@@ -106,7 +106,7 @@ if (process.env.NODE_ENV === 'local') {
     devtool: 'source-map',
     mode: 'development',
     devServer: {
-      contentBase: './dist',
+      static: './dist',
       host: 'localhost', // 'localhost',//host: '192.168.0.57',
       hot: true,
       historyApiFallback: true,
