--- a/docs/option/99.md
+++ b/docs/option/99.md
@@ -113,7 +113,7 @@ if (process.env.NODE_ENV === 'local') {
     devtool: 'source-map',
     mode: 'development',
     devServer: {
-      contentBase: './dist',
+      static: './dist',
       host: 'localhost', // 'localhost',//host: '192.168.0.57',
       hot: true,
       port: 8888,
