--- a/docs/typescript/06.md
+++ b/docs/typescript/06.md
@@ -1,6 +1,6 @@
 # Utils
 
-## Partial (部分 부분적)
+## Partial
 
 ```ts
 interface Todo {
@@ -9,7 +9,7 @@ interface Todo {
 }
 
 type Todo2 = Partial<Todo>
-
+// equal
 type Todo2 = {
   title?: string | undefined;
   description?: string | undefined;
@@ -25,7 +25,7 @@ interface Todo {
 }
 
 type Todo2 = Required<Todo>
-
+// equal
 type Todo2 = {
   title: string;
   description: string;
@@ -40,8 +40,84 @@ interface Todo {
 }
 
 type Todo2 = Readonly<Todo>
-
+// equal
 type Todo2 = {
   readonly title: string;
 }
+```
+
+## Record
+
+```ts
+interface Todo {
+  title: string;
+  description: string;
+}
+
+type Name = "dao" | "lang";
+
+type AllUserTodo = Record<Name, Todo>
+// equal
+type AllUserTodo = {
+  dao: Todo,
+  lang: Todo,
+}
+```
+
+## Pick
+
+```ts
+interface TodoMeta {
+  title: string;
+  description: string;
+  completed: boolean;
+}
+
+type Todo = Pick<TodoMeta, 'title' | 'description'>
+// equal
+type Todo = {
+  title: string;
+  description: string;
+}
+```
+
+## Omit
+
+```ts
+interface TodoMeta {
+  title: string;
+  description: string;
+  completed: boolean;
+}
+
+type Todo = Omit<TodoMeta, 'completed'>
+// equal
+type Todo = {
+  title: string;
+  description: string;
+}
+```
+
+## Exclude
+
+```ts
+type T0 = Exclude<'a' | 'b' | 'c', 'a'>
+// equal
+type T0 = 'b' | 'c';
+```
+
+## Extract
+
+```ts
+type T0 = Extract<'a' | 'b' | 'c', 'a' | 'f'>
+// equal
+type T0 = 'a'
+```
+
+## NonNullable
+
+```ts
+type T0 = NonNullable<string | number | null | undefined | boolean>
+// equal
+type T0 = string | number | boolean
 ```
