fix: typescript utils

--- a/docs/typescript/06.md
+++ b/docs/typescript/06.md
@@ -121,3 +121,27 @@ type T0 = NonNullable<string | number | null | undefined | boolean>
 // equal
 type T0 = string | number | boolean
 ```
+
+## Intrinsic String Manipulation Types
+
+```ts
+// Uppercase
+type T0 = Uppercase<'dao' | 'lang'>
+// equal 
+type T0 = 'DAO' | 'LANG'
+
+// Lowercase
+type T1 = Lowercase<'DAO' | 'LANG'>
+// equal 
+type T1 = 'dao' | 'lang'
+
+// Capitalize
+type T2 = Capitalize<'dao' | 'lang'>
+// equal
+type T2 = "Dao" | "Lang"
+
+// Uncapitalize
+type T3 = Uncapitalize<'Dao' | 'Lang'>
+// equal
+type T3 = "dao" | "lang"
+```
