--- a/docs/typescript/06.md
+++ b/docs/typescript/06.md
@@ -122,6 +122,30 @@ type T0 = NonNullable<string | number | null | undefined | boolean>
 type T0 = string | number | boolean
 ```
 
+## Parameters
+
+```ts
+type T0 = Parameters<() => string>;
+// equal  
+type T0 = []
+
+type T1 = Parameters<(t: string) => void>
+// eaual
+type T1 = [t: string]
+```
+
+## ReturnType
+
+```ts
+type T0 = ReturnType<() => string>;
+// equal
+type T0 = string;
+
+type T1 = ReturnType<any>
+// equal
+type T1 = any;
+```
+
 ## Intrinsic String Manipulation Types
 
 ```ts
