--- a/docs/option/09.md
+++ b/docs/option/09.md
@@ -354,6 +354,29 @@ $ npm install --save-dev conventional-changelog-conventionalcommits
 }
 ```
 
+### with lerna(monorepo)
+
+```sh
+npx lerna exec --concurrency 1 -- npx --no-install semantic-release
+```
+
+```js
+// .releaserc.json
+{
+  ...
+  "extends": "semantic-release-monorepo"
+}
+
+// lerna.json
+{
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.0.0"
+}
+```
+
+
 
 ### 정리
 
