--- a/docs/option/06.md
+++ b/docs/option/06.md
@@ -23,3 +23,15 @@ Object.keys(map).forEach(key => {
   app.use(`/proxy/${key}`, proxy(map[key]));
 });
 ```
+
+
+###
+```javascirpt
+const express = require('express');
+const { createProxyMiddleware } = require('http-proxy-middleware');
+
+const app = express();
+
+app.use('/*', createProxyMiddleware({ target: 'https://backoffice-gateway-dev.wemakeprice.com', changeOrigin: true }));
+app.listen(9000);
+```
