--- a/docs/option/06.md
+++ b/docs/option/06.md
@@ -26,7 +26,7 @@ Object.keys(map).forEach(key => {
 
 
 ###
-```javascirpt
+```javascript
 const express = require('express');
 const { createProxyMiddleware } = require('http-proxy-middleware');
 
