--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -116,6 +116,44 @@ visible ? <About /> : <Main />
 // bailout로직중 newProps === oldProps 여야만 컴포넌트를 랜딩하지 않는다.
 // 하위 컴포넌트에 React.memo 적용시 알고리즘을 실행해서 랭딩한다.
 // 자주 변하는 값은 필요없지만 업데이트가 적거나 static한 컴포넌트는 필요하다.
+
+import React, { useState, useMemo } from "react";
+
+const EffectComponent = () => {
+  console.log("render effect Component");
+  return <>effect Component</>;
+};
+
+// const a = <EffectComponent />
+
+// const diff = (prevProps, nextProps) => {
+//   console.log(prevProps === nextProps);
+//   return prevProps === nextProps;
+// }
+
+// const MemoEffectComponent = React.memo(EffectComponent, diff);
+
+const App = () => {
+  const [count, setCount] = useState(0); // state또는 context를 건드렸기 때문.
+  const onChange = (e) => {
+    setCount(count + 1);
+  };
+
+  // const b = useMemo(() => <EffectComponent />, [])
+
+  return (
+    <>
+      <h2>Register</h2>
+      <input onChange={onChange} />
+      <p>{count}</p>
+      <EffectComponent />
+      {/* {a} */}
+      {/* <MemoEffectComponent /> */}
+    </>
+  );
+};
+
+export default App;
 ```
 
 3. useMemo, useCallback로 캐시
