--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -239,3 +239,9 @@ const onClick = () => {...};
 **React without memo**
 
 ** codesandbox사용시 react memo는 refresh해야 확인가능(livereload로 잘 안됨.)
+
+<br/>
+<br/>
+
+### 시험단계
+- https://zh-hans.reactjs.org/docs/reconciliation.html#the-diffing-algorithm
