--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -243,5 +243,5 @@ const onClick = () => {...};
 <br/>
 <br/>
 
-### 시험단계
+### 참고링크
 - https://zh-hans.reactjs.org/docs/reconciliation.html#the-diffing-algorithm
