--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -100,8 +100,7 @@ visible ? <About /> : <Main />
 - oldProps === newProps
 - context 값의 변화가 있는지?
 - workInProgress.type === current.type
-- !includesSomeLane(renderLanes, updateLanes) 
-업데이트 EffectTag가 존재한지, 존재하면 이번 업데이트 task에 포함 되는건지 ?
+- 업데이트 EffectTag가 존재한지, 존재하면 이번 priority 업데이트 task에 포함 되는건지 ?
 
 <br/>
 <br/>
