--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -188,7 +188,7 @@ export default function App() {
 <div style={{width: 200}}></div>
 // good
 const style = {width:200}
-<div style={style}></style>
+<div style={style}></div>
 ```
 
 5. 익명함수 사용금지.
