--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -235,9 +235,8 @@ const onClick = () => {...};
 <br/>
 
 ### 시험단계
-**React without memo**
-
-** codesandbox사용시 react memo는 refresh해야 확인가능(livereload로 잘 안됨.)
+- **React forget(React without memo)**
+- **Offscreen API**
 
 <br/>
 <br/>
