--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -78,7 +78,7 @@ visible ? <About /> : <Main />
 <div key="1">123</div>
 <p key="1">123</p>
 
-// slibing요소내 key가 서로 다른 경우 순서만 조정(요소 재배치)
+// sibling요소내 key가 서로 다른 경우 순서만 조정(요소 재배치)
 <ul>
 <li key="0">0</li>
 <li key="1">1</li>
