--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -7,9 +7,9 @@
 ```jsx
 // 전부 교체
 <section>
-	<div class="content">hello</div>
+	<div className="content">hello</div>
 </section>
-<div class="content">hello</div>
+<div className="content">hello</div>
 ```
 
 2. component 비교
