--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -95,6 +95,114 @@ visible ? <About /> : <Main />
 <br/>
 <br/>
 
+6. 멀티노드 비교
+	1. 1단계
+```jsx
+// newChildNode, oldChildNode 동시 끝나는 경우(Update 처리)
+// old
+<ul>
+<li key="0" className="normal">0</li>
+<li key="1" className="normal">1</li>
+<li key="2" className="normal">2</li>
+</ul>
+// new
+<ul>
+<li key="0" className="bold">0</li>
+<li key="1" className="bold">1</li>
+<li key="2" className="bold">2</li>
+</ul>
+
+// newChildNode 순회가 먼저 끝나는 경우(Vdom Delection 처리)
+// old
+<ul>
+<li key="0">0</li>
+<li key="1">1</li>
+<li key="2">2</li> <!-- Delection 처리 -->
+</ul>
+// new
+<ul>
+<li key="0">0</li>
+<li key="1">1</li>
+</ul>
+
+// oldChildNode 순회가 먼저 끝나는 경우(Vdom Placement 처리)
+// old
+<ul>
+<li key="0">0</li>
+<li key="1">1</li>
+</ul>
+// new
+<ul>
+<li key="0">0</li>
+<li key="1">1</li>
+<li key="2">2</li> <!-- Placement 처리 -->
+</ul>
+
+// key가 동일하고 type이 다를 경우 oldChildNode Deletion처리.
+// old
+<ul>
+<li key="0">0</li>
+<li key="1">1</li> <!-- Delection 처리 -->
+<li key="2">2</li>
+</ul>
+// new
+<ul>
+<li key="0">0</li>
+<div key="1">1</div>
+<li key="2">2</li>
+</ul>
+
+// oldChildNode, newChildNode모두 남아 있는 경우(key가 다른 부분이 있으면 바로 다음단계.)
+// old
+<ul>
+<li key="0">0</li>
+<li key="1">1</li>
+<li key="2">2</li>
+</ul>
+// new
+<ul>
+<li key="0">0</li>
+<li key="2">2</li>
+<li key="1">1</li>
+</ul>
+```
+
+2. 2단계
+
+```jsx
+- 빠른 처리를 위해서 남아있는 oldChildNode를 map객체에 [key]: fiber(vdom) 추가한다.
+- placeChild 실행
+    1. lastPlacedIndex = 0
+    2. oldIndex ≥ lastPlaceIndex 일때 이동하지 않고 lastPlaceIndex = oldIndex로 설정.
+    3. oldIndex < lastPlaceIndex 일때 맨 뒤로 이동.
+    4. map객체에 관련된 데이터가 없을 경우 Placement
+    5. oldChildNode순회후 newChildNode랑 매핑되지 않는 부분은 Deletion 처리
+    
+// old
+<ul>
+<li key="a">a</li>
+<li key="b">b</li>
+<li key="c">c</li>
+<li key="d">d</li>
+</ul>
+// new
+<ul>
+<li key="d">d</li>
+<li key="a">a</li>
+<li key="b">b</li>
+<li key="c">c</li>
+</ul>
+// lastPlacedIndex = 0;
+// D가 oldChildNode에서의 index가 3임
+// 3 >= lastPlaceIndex 이니 이동이 필요 없음. lastPlaceIndex = 3으로 지정
+// A가 oldChildNode에서의 index가 0임  
+// 0 < 3(lastPlaceIndex) 이니 맨뒤로 이동.
+// B가 oldChildNode에서의 index가 1임  
+// 0 < 3(lastPlaceIndex) 이니 맨뒤로 이동.
+// C가 oldChildNode에서의 index가 2임  
+// 0 < 3(lastPlaceIndex) 이니 맨뒤로 이동.
+```
+
 ## React render하는 조건(bailout조건)
 
 - oldProps === newProps
