--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -2,7 +2,7 @@
 
 ## Diff Algorithm (VDOM)
 
-1. Tree diff 동일레벨(depth) 요소끼리 비교
+#### 1. Tree diff 동일레벨(depth) 요소끼리 비교
 
 ```jsx
 // 전부 교체
@@ -12,7 +12,7 @@
 <div className="content">hello</div>
 ```
 
-2. component 비교
+#### 2. component 비교
 
 ```jsx
 // 전부 교체
@@ -22,7 +22,7 @@ const Main = () => <div>About</div>
 visible ? <About /> : <Main />
 ```
 
-3. Element Type 비교
+#### 3. Element Type 비교
 
 ```jsx
 // 전부 교체
@@ -43,7 +43,7 @@ visible ? <About /> : <Main />
 
 ```
 
-4. Element Props 비교
+#### 4. Element Props 비교
 
 ```jsx
 // Element가 동일할 경우 props 변경된 부분만 교체, 순서 중요하지 않음. 스타일 obj도 마찬가지.
@@ -63,7 +63,7 @@ visible ? <About /> : <Main />
 </div>
 ```
 
-5. key(우선순위 제일 높음.)
+#### 5. key(우선순위 제일 높음.)
 
 ```jsx
 // key설정 하지 않으면 null로 처리.
@@ -95,8 +95,9 @@ visible ? <About /> : <Main />
 <br/>
 <br/>
 
-6. 멀티노드 비교
-	1. 1단계
+#### 6. 멀티노드 비교
+1. 1단계
+
 ```jsx
 // newChildNode, oldChildNode 동시 끝나는 경우(Update 처리)
 // old
