--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -343,7 +343,7 @@ const onClick = () => {...};
 
 ### 시험단계
 - **React forget(React without memo)**
-- **Offscreen API**
+- **Offscreen API** https://vuejs.org/guide/built-ins/keep-alive.html#include-exclude
 
 <br/>
 <br/>
