--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -212,7 +212,7 @@ visible ? <About /> : <Main />
 <br/>
 <br/>
 
-## 최적화 하는 방법
+## 최적화 하는 종류
 
 1. ~~PureComponent,shouldComponentUpdate~~ 
 2. React.memo로 캐시(PureComponent로 만들고 싶을때 사용.)
