--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -335,6 +335,9 @@ const onClick = () => {...};
 <br/>
 <br/>
 
+11. useLayoutEffect에 오래 실행되는 스크립트 사용하지 말것.(useEffect와 달리 sync로 실행됨.)
+
+
 ## React Design
 
 - 변화(props, state, context)랑 불변을 분리해서 처리.
