--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -331,11 +331,7 @@ const onClick = () => {...};
 8. lazyload(suspense) with webpack
 9. transtion(react18)
 10. immer 사용(구조공유)
-
-<br/>
-<br/>
-
-11. useLayoutEffect에 오래 실행되는 스크립트 사용하지 말것.(useEffect와 달리 sync로 실행됨.)
+11. useLayoutEffect, useInsertionEffect에 오래 실행되는 스크립트 사용하지 말것.(useEffect와 달리 sync로 실행됨.)
 
 
 ## React Design
