--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -224,6 +224,7 @@ visible ? <About /> : <Main />
 // bailout로직중 newProps === oldProps 여야만 컴포넌트를 랜딩하지 않는다.
 // 하위 컴포넌트에 React.memo 적용시 알고리즘을 실행해서 랭딩한다.
 // 자주 변하는 값은 필요없지만 업데이트가 적거나 static한 컴포넌트는 필요하다.
+// 컴포넌트 자체에서 props, state, context변화가 없고 부모의 부모의 .....  key값이 변화가 없는데 rerender된다. 
 
 import React, { useState, useMemo } from "react";
 
@@ -333,6 +334,8 @@ const onClick = () => {...};
 10. immer 사용(구조공유)
 11. useLayoutEffect, useInsertionEffect에 오래 실행되는 스크립트 사용하지 말것.(useEffect와 달리 sync로 실행됨.)
 
+<br/>
+<br/>
 
 ## React Design
 
