--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -1,5 +1,14 @@
 # React성능 최적화
 
+## 목차
+
+- Diff Algorithm(VDOM)
+- React render하는 조건(bailout조건)
+- 최적화 유형
+- React Design
+- 시험단계
+- 참고링크
+
 ## Diff Algorithm (VDOM)
 
 #### 1. Tree diff 동일레벨(depth) 요소끼리 비교
@@ -201,7 +210,7 @@ visible ? <About /> : <Main />
 <br/>
 <br/>
 
-## 최적화 하는 종류
+## 최적화 유형
 
 1. ~~PureComponent,shouldComponentUpdate~~ 
 2. React.memo로 캐시(PureComponent로 만들고 싶을때 사용.)
@@ -327,6 +336,24 @@ const onClick = () => {...};
 ## React Design
 
 - 변화(props, state, context)랑 불변을 분리해서 처리.
+
+```js
+const App = () => {
+  const [count, setCount] = useState(0);
+  return (
+    <>
+      {/* Title 컴포넌트 분리 */}
+      <h1>h1</h1>
+
+      {/* 이부분 분리 필요 */}
+      <p>{count}</p>
+      <button onClick={() => setCount(count + 1)}>+1</button>
+      {/* 이부분 분리 필요 */}
+    </>
+  )
+}
+```
+
 - 자주 랜더되는 컴포넌트를 찾고 그 parent노드를 찾아 가면서 최적화.
 
 <br/>
