--- a/docs/reactCore/01.md
+++ b/docs/reactCore/01.md
@@ -3,6 +3,13 @@
 ### React강점?
 
 지속가능한 인터랙티브(consistently interactive), 즉 time slice(concurent)
+프레임워크 비교에서 리액트가 후순위로 밀려나는 이유는 consistently interactive가 성능에서 제외되었기 때문이다.(링크참고)
+
+react legacy
+![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/07/08/20220708165000.png)
+
+react concurrent
+![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/07/08/20220708165201.png)
 
 <br />
 
@@ -18,6 +25,7 @@
     - react(jsx, react render fn은 완전 동적이여서 최적화가 어려움.)
 
 <br />
+
 
 ### Algebraic Effect(OCaml)
 
@@ -49,3 +57,5 @@ const Total = () => {
 [https://overreacted.io/algebraic-effects-for-the-rest-of-us/](https://overreacted.io/algebraic-effects-for-the-rest-of-us/)
 
 [https://github.com/halfnelson/svelte-it-will-scale](https://github.com/halfnelson/svelte-it-will-scale)
+
+[https://krausest.github.io/js-framework-benchmark/2022/table_chrome_103.0.5060.53_osx.html](https://krausest.github.io/js-framework-benchmark/2022/table_chrome_103.0.5060.53_osx.html)
