--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -109,6 +109,50 @@ beginWork, completeWork 단계를 실행후 현재 fiber.stateNode에 realDom을
 
 <br />
 
+## hostConfig 외부 API(react-dom 빌드시 해당 부분 함께 빌드)
+
+```js
+import ReactReconciler from "react-reconciler";
+
+const hostConfig = {
+  now: Date.now,
+  getRootHostContext: () => {},
+  clearContainer: () => {},
+  prepareForCommit: () => {},
+  resetAfterCommit: () => {},
+  getChildHostContext: () => {},
+  shouldSetTextContent: () => {},
+  createInstance: () => {},
+  createTextInstance: () => {},
+  appendInitialChild: () => {},
+  appendChild: () => {},
+  finalizeInitialChildren: () => {},
+  supportsMutation: true,
+  appendChildToContainer: () => {},
+  prepareUpdate = () => {},
+  commitUpdate = () => {},
+  commitTextUpdate = () => {},
+  removeChild = () => {},
+}
+const ReactReconcilerInst = ReactReconciler(hostConfig);
+
+export const render = (reactElement, domElement, callback) => {
+
+  if (!domElement._rootContainer) {
+    console.log(ReactReconcilerInst);
+    domElement._rootContainer = ReactReconcilerInst.createContainer(domElement);
+  }
+  // 컨테이너 업데이트
+  return ReactReconcilerInst.updateContainer(reactElement, domElement._rootContainer, null, callback);
+}
+
+export default {
+  render
+}
+```
+
+<br />
+
 ### 참고
 
 [https://velog.io/@dev-mish-mash/%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%9D%98-%EC%A1%B0%ED%99%94Reconciliation-%EA%B3%BC%EC%A0%95-%EC%A0%95%EB%A6%AC](https://velog.io/@dev-mish-mash/%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%9D%98-%EC%A1%B0%ED%99%94Reconciliation-%EA%B3%BC%EC%A0%95-%EC%A0%95%EB%A6%AC)
