--- a/docs/reactCore/00.md
+++ b/docs/reactCore/00.md
@@ -14,7 +14,12 @@
 - core적인 개념, 용어에 대해서 설명(코드기반 구체적인 구현은 Pass)
     - detail한 부분은 react 내부적으로 linkedList를 사용한 부분이 많아서 쉽게 헛갈림.
     - 버전별 변화가 많아서 어려운 부분도 있음.
-- 디버깅 도구에서 작동하는 부분 확인할 예정.
+- 디버깅 도구에서 작동하는 방법
+- 서비스 관점에서 접근하다 보면 이해가 안되는 부분이 많음
+    - lanes, effectTag(flags) bit연산
+    - 복합적인 update 처리.
+    - linkedList
+    - 동시성모드에서 task 분배
 
 <br />
 
