--- a/docs/reactCore/00.md
+++ b/docs/reactCore/00.md
@@ -4,7 +4,7 @@
 
 - react core에 대한 이해도를 높이는 것으로 react작동 원리를 파악하는것.
 - 내부 작동 원리를 이해하여 최적화에 대한 이해도를 올리는 것.
-- 공유를 통해서 궁금한 부분에 대해서 알고 넘어가는 것.
+- 공유를 통해서 서로 궁금한 부분에 대해서 알고 넘어가는 것.
 
 <br />
 
