--- a/docs/reactCore/02.md
+++ b/docs/reactCore/02.md
@@ -14,7 +14,7 @@ Fiber Reconciler는 Fiber Node 기반으로 실현(`scheduler`)
 
 ### Fiber 아키텍처의 의미
 
-fiber는 node단위를 한개 workUnit으로 async중단 가능한 업데이트를 실현(timeSlice실현.)
+fiber는 node단위를 한개 workUnit으로 비동기이고 중단 가능한 업데이트를 실현(concurrent 모드, timeSlice실현.)
 <br/>
 <br/>
 
@@ -93,6 +93,8 @@ JSX ⇒ BABEL ⇒ React.createElement ⇒ ReactElement ⇒ ReactDom.render ⇒ R
 ### Root
 
 fiberRoot(변하지 않음.) > rootFiber > App > div
+
+<br/>
 
 ### fiber 생성순서
 
