--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -149,6 +149,8 @@ export const render = (reactElement, domElement, callback) => {
 export default {
   render
 }
+// "react-reconciler": "0.26.2",
+// "react": "17.0.2",
 ```
 
 <br />
