--- a/docs/reactCore/00.md
+++ b/docs/reactCore/00.md
@@ -4,7 +4,7 @@
 
 - 주변에서 뭔가 물어 봤을때 어떻게 사용한다 라는 정도만 알고 왜 그런지는 설명하기 어려웠고
 - 인터넷 검색시 만족스러운 답변을 찾지 못할때가 많았음.
-- react, vue의 차이점에 대해서 사용법이 다른거 뺴고는 큰 매리트를 못느꼈음.
+- react, vue의 차이점에 대해서 사용법이 다른거 빼고는 큰 매리트를 못느꼈음.
 - react 같은 프레임워크를 만들어 보고 싶었음.
 
 <br />
