--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -1,4 +1,12 @@
-# Reconciler(work)
+# Reconciler
+
+### 역할
+- Function또는 class컴포넌트의 render 함수를 실행해서 jsx를 vdom으로 변경
+- 새로운 vdom과 기존 vdom을 비교한다.
+- diff통해서 변화한 부분을 체크한다.
+- renderer를 통해서 DOM을 화면에 뿌려준다.
+
+<br />
 
 ### fiber관련 태그 설명.
 
