--- a/docs/jest/01.md
+++ b/docs/jest/01.md
@@ -139,3 +139,34 @@ test('rejects to octopus', () => {
 `toThrow` 判断是否抛出指定的异常。
 
 `toBeInstanceOf` 判断对象是否是某个类的实例，底层使用 `instanceof`。
+
+### extends
+
+```js
+const expect = require('expect');
+
+const expectExtend = (props, textList) => {
+  let isMatchText = true;
+  let noMatchtextList = [];
+  for (const text of textList) {
+    try {
+      props.getByText(text);
+    } catch {
+      isMatchText = false;
+      noMatchtextList.push(text);
+    }
+  }
+  if (isMatchText) {
+    return {
+      message: () => 'success',
+      pass: true,
+    };
+  }
+  return {
+    message: () => `not match some text "${noMatchtextList.join(', ')}"`,
+    pass: false,
+  };
+};
+
+expect.extend(expectExtend);
+```
