--- a/docs/jest/01.md
+++ b/docs/jest/01.md
@@ -140,12 +140,12 @@ test('rejects to octopus', () => {
 
 `toBeInstanceOf` 判断对象是否是某个类的实例，底层使用 `instanceof`。
 
-### extends
+### extends sample
 
 ```js
 const expect = require('expect');
 
-const expectExtend = (props, textList) => {
+const toMatchAllText = (props, textList) => {
   let isMatchText = true;
   let noMatchtextList = [];
   for (const text of textList) {
@@ -168,5 +168,7 @@ const expectExtend = (props, textList) => {
   };
 };
 
-expect.extend(expectExtend);
+expect.extend({toMatchAllText: toMatchAllText});
+
+// expect(props.getByTestId('01').innerHTML).toMatchAllText('헤딩 타이틀');
 ```
