--- a/docs/reactCore/02.md
+++ b/docs/reactCore/02.md
@@ -6,15 +6,13 @@ Fiber Architecture
 
 Fiber Node, Fiber Tree, FiberRoot, rootFiber
 
-Fiber Reconciler는 Fiber Node 기반으로 실현(`scheduler`)
+Fiber Reconciler는 Fiber Node 기반으로 실현
 
-ㄴ Stack Reconciler는 Stack 기반으로 실현
-<br/>
 <br/>
 
 ### Fiber 아키텍처의 의미
 
-fiber는 node단위를 한개 workUnit으로 비동기이고 중단 가능한 업데이트를 실현(concurrent 모드, timeSlice실현.)
+fiber는 node단위를 한개 workUnit으로 비동기 이고 중단 가능한 업데이트를 실현(concurrent 모드, timeSlice실현.)
 <br/>
 <br/>
 
@@ -81,24 +79,25 @@ function FiberNode(
 이와같이 메모리에서 구성하고 바로 교체 해주는 방식을 DoubleBuffer라고 한다.
 
 current fiber ⇒ workInProgress fiber(alternate)
-<br/>
-<br/>
 
-### JSX to Fiber
-
-JSX ⇒ BABEL ⇒ React.createElement ⇒ ReactElement ⇒ ReactDom.render ⇒ ReactDOM.legacyCreateRootFromDOMContainer ⇒ createFiberRoot
-<br/>
 <br/>
 
 ### Root
 
 fiberRoot(변하지 않음.) > rootFiber > App > div
 
+![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/07/25/20220725213905.png)
+<br/>
+
+### JSX to Fiber
+
+JSX ⇒ BABEL ⇒ React.createElement ⇒ ReactElement ⇒ ReactDom.render ⇒ ReactDOM.legacyCreateRootFromDOMContainer ⇒ createFiberRoot
+
 <br/>
 
 ### fiber 생성순서
 
-![https://i.stack.imgur.com/GhT5V.jpg](https://i.stack.imgur.com/GhT5V.jpg)
+![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/07/25/20220725214257.png)
 
 *React 자식요소가 only textNode일 경우 별도 fiber생성 하지 않는다. (isDirectTextChild)
 <br/>
