--- a/docs/reactCore/02.md
+++ b/docs/reactCore/02.md
@@ -100,7 +100,19 @@ JSX ⇒ BABEL ⇒ React.createElement ⇒ ReactElement ⇒ ReactDom.render ⇒ R
 ![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/07/25/20220725214257.png)
 
 *React 자식요소가 only textNode일 경우 별도 fiber생성 하지 않는다. (isDirectTextChild)
-<br/>
+
+```html
+<div><!-- 1 -->
+  <header/><!-- 2 -->
+    <h1><!-- 3 -->
+      page Title<!-- 4 -->
+      <span></span><!-- 5 -->
+    </h1>
+    <input /><!-- 6 -->
+  </header>
+  <div>contents</div><!-- 7 -->
+</div>
+```
 <br/>
 
 ### Vdom에 대한 이해?
