--- a/docs/reactCore/02.md
+++ b/docs/reactCore/02.md
@@ -111,6 +111,13 @@ JSX ⇒ BABEL ⇒ React.createElement ⇒ ReactElement ⇒ ReactDom.render ⇒ R
     <input /><!-- 6 -->
   </header>
   <div>contents</div><!-- 7 -->
+  <footer><!-- 8 -->
+    <div><!-- 9 -->
+      <p>copyright</p><!-- 10 -->
+      <p>email: aa@bb.com</p><!-- 11 -->
+    </div>
+    <p>footer</p><!-- 12 -->
+  </footer>
 </div>
 ```
 <br/>
