--- a/docs/reactCore/04.md
+++ b/docs/reactCore/04.md
@@ -16,10 +16,16 @@
 Update 활성화
     |
     v
-task Priority에 따라 batchUpdate
+shared.pendding 생성
     |
     v
-reconciler
+....
+    |
+    v
+updateQueue 처리(completeWork)
+    |
+    v
+...
 ```
 
 <br />
