--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -73,7 +73,7 @@ beginWork, completeWork 단계를 실행후 현재 fiber.stateNode에 realDom을
 
 <br />
 
-### before mutation (commtBeforeMutationEffects)
+### before mutation (commitBeforeMutationEffects)
 
 - DOM노드 랜더/삭제후 focus, blur 관련 로직처리.
 - getSnapshotBeforeUpdate(ClassComponent)
@@ -94,7 +94,7 @@ beginWork, completeWork 단계를 실행후 현재 fiber.stateNode에 realDom을
 
 <br />
 
-### layout (commtLayoutEffects)
+### layout (commitLayoutEffects)
 
 - 라이프사이클 및 hook 실행
     - FunctionComponent
