--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -55,13 +55,9 @@
 - (mount)fiber.stateNode에 관련된 DOM노드 생성
 - (mount)children DOM노드를 생성된 fiber.stateNode DOM노드에 insert
 - (mount) props 처리
-- (update) updateQueue처리
-- (update) props diff 처리
+- (update) fiber.updateQueue처리
+- (update) props diff 처리후 fiber.pendingProps에 저장.
 - effectTag 생성된 fiber에 대해서 effectList에 추가.
-
-<br />
-
-beginWork, completeWork 단계를 실행후 현재 fiber.stateNode에 realDom을 생성완료
 
 <br />
 
@@ -89,7 +85,8 @@ beginWork, completeWork 단계를 실행후 현재 fiber.stateNode에 realDom을
         - FunctionComponent
             - effectList에서 모든 useLayoutEffect의 destory 함수 실행.
         - HostComponent
-            - updateQueue중 대응하는 내용 화면에 랜딩.
+            - fiber.updateQueue중 대응하는 내용 화면에 랜딩.
+            - fiber.pendingProps내용 화면에 랜딩
     - Deletion
 
 <br />
