--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -160,6 +160,26 @@ export default {
 
 <br />
 
+### effectList => sugtreeFlags
+
+- effectList인 경우
+
+![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/08/03/20220803212122.png)
+
+- SubtreeFlags
+
+![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/08/03/20220803212256.png)
+
+- B의 effect는 Passive이고 bubble을 통해서 A로 이동, A.subtreeFlags에 Passive포함. 
+- E의 effect는 Placement이고 bubble통해서 D로 이동, D.subtreeFlags에 Placement포함.
+- D.subtreeFlags에 Placement가 bubble통해서 C로 이동
+- C의 effect는 Update이고, C.subtreeFlags의 Placement가 bubble통해서 A로
+- A.subtreeFlags는 Passive、Placement、Update를 포함.
+- commit단계에서 모든 tree를 순회하면서 처리. 
+ 
+<br />
+
+
 ### 참고
 
 [https://velog.io/@dev-mish-mash/%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%9D%98-%EC%A1%B0%ED%99%94Reconciliation-%EA%B3%BC%EC%A0%95-%EC%A0%95%EB%A6%AC](https://velog.io/@dev-mish-mash/%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%9D%98-%EC%A1%B0%ED%99%94Reconciliation-%EA%B3%BC%EC%A0%95-%EC%A0%95%EB%A6%AC)
