--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -160,13 +160,13 @@ export default {
 
 <br />
 
-### effectList => sugtreeFlags
+### effectList => subtreeFlags
 
 - effectList인 경우
 
 ![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/08/03/20220803212122.png)
 
-- SubtreeFlags
+- subtreeFlags
 
 ![](https://raw.githubusercontent.com/jl917/jl917.github.io/master/img/2022/08/03/20220803212256.png)
 
