--- a/docs/reactCore/03.md
+++ b/docs/reactCore/03.md
@@ -23,6 +23,7 @@
     - Update
     - PlacementAndUpdate
     - Deletion
+    - Passive
 - effectList(firstEffect, nextEffect, lastEffect)
 - stateNode => DOM객체 저장.
 
