--- a/docs/reactCore/04.md
+++ b/docs/reactCore/04.md
@@ -66,6 +66,9 @@ function basicStateReducer(state, action) {
 
 ### Update Queue
 
+- baseState: 메모리에 임시 저장되는 값.
+- memoizedState: 화면에 노출되는 값
+
 ```js
 // ClassComponent
 const Fiber = {
