--- a/docs/reactCore/04.md
+++ b/docs/reactCore/04.md
@@ -68,6 +68,7 @@ function basicStateReducer(state, action) {
 
 - baseState: 메모리에 임시 저장되는 값.
 - memoizedState: 화면에 노출되는 값
+- shared.pending: 업데이트 활성화시 임시 저장하고 우선순위에 적합한 Update만 firstBaseUpdate뒤에 추가.
 
 ```js
 // ClassComponent
@@ -79,7 +80,7 @@ const Fiber = {
     shared: {
       pending: Updates
     }
-    effects: []
+    effects: [] // update.callback 이 존재하는 경우만 배열에 추가
   }
   memoizedState: stateValue
 }
