--- a/docs/reactCore/04.md
+++ b/docs/reactCore/04.md
@@ -18,7 +18,7 @@ this.update.enqueueSetState 통해서 Update를 생성하고 실행한다.
 Update 활성화
     |
     v
-shared.pendding 생성
+shared.pending 생성
     |
     v
 ....
