--- a/docs/reactCore/04.md
+++ b/docs/reactCore/04.md
@@ -167,6 +167,8 @@ const App = () => {
   }
 
   useEffect(() => {
+    // 레거시 모드에서는 10, 11로 화면에 노출
+    // 동시성 모드에서는 1, 11로 화면에 노출(1차 우선순위 높은거 실행, 2차 순차적으로 실행.)
     setTimeout(() => {setCount(count+10)}, 2000)
     setTimeout(() => {btnRef.current.click()}, 2000)
   }, [])
