--- a/docs/http/https/01.md
+++ b/docs/http/https/01.md
@@ -16,8 +16,11 @@
 
 
 
-
-
+#### 生成认证书
+```sh
+openssl req -x509 -newkey rsa:2048 -nodes -sha256 -days 3650 -subj '/CN=localhost' \
+  -keyout localhost-privkey.pem -out localhost-cert.pem
+```
 
 
 
