--- a/docs/reactCore/01.md
+++ b/docs/reactCore/01.md
@@ -38,6 +38,7 @@ react concurrent
 
 - functional programing중 개념.
 - 부작용(effect)을 함수 내부에서 분리
+- React 개발시 useState 같은 경우 내부적으로 어떻게 처리하는지 신경쓰지 않아도 되고 어떤 데이터를 반환하는지 만 알고 코드 작성하면 된다. 
 
 ```jsx
 const getTotal = () => {
