--- a/docs/plugins/03.md
+++ b/docs/plugins/03.md
@@ -6,7 +6,8 @@ export default function myPlugin() {
   return {
 		name: 'my-plugin', // 插件名称
 		enforce: 'pre', //调整插件被执行顺序
-		apply: "build | serve", // 指定插件应用情景options(options) {
+		apply: "build | serve", // 指定插件应用情景
+		options(options) {
 		},
 		buildStart(options) {
 		},
