--- a/docs/typescript/02.md
+++ b/docs/typescript/02.md
@@ -9,6 +9,15 @@ const p1: keyof Person = 'name'; // ok
 const p2: keyof Person = 'email'; // error
 ```
 
+## in
+keyof 取 interface(type) 的键。
+```ts
+type name = 'firstname' | 'lastname'
+type TName = {
+  [key in name]: string
+}
+```
+
 ## Partial & Pick
 ```ts
 type Partial<T> = {
