--- a/docs/react/03.md
+++ b/docs/react/03.md
@@ -1,35 +1,10 @@
-#### useState, useEffect
+## 상태관련 (7/21)
+#### useState
 ```jsx
 const App = () => {
   const [count, setCount] = useState(0);
-  useEffect(() => {
-    console.log(111);
-  }, []);
   return (
-    <div>
-      <h1>{count}</h1>
-      <button type="button" onClick={() => setCount(count + 1)}>
-        +
-      </button>
-    </div>
-  );
-};
-```
-
-#### useCallback, useMemo
-```jsx
-const App = () => {
-  const title = useMemo(() => 'dao', []);
-  const setTitle = useCallback(() => {
-    console.log(111);
-  }, []);
-  return (
-    <div>
-      <h1>{title}</h1>
-      <button type="button" onClick={setTitle}>
-        +
-      </button>
-    </div>
+    <h1 onClick={() => setCount(count + 1)}>{count}</h1>
   );
 };
 ```
@@ -61,62 +36,136 @@ function Counter() {
 }
 ```
 
-
-#### react-router
+#### useContext
 ```jsx
-function usePageViews() {
-  let location = useLocation();
-  React.useEffect(() => {
-    ga.send(["pageview", location.pathname]);
-  }, [location]);
-}
 
-function App() {
-  let history = useHistory();
-
-  function handleClick() {
-    history.push("/home");
-  }
-
-  usePageViews();
-  return (
-    <button type="button" onClick={handleClick}>
-      Go home
-    </button>
-  );
-}
 ```
 
-```jsx
-function BlogPost() {
-  let { slug } = useParams();
-  return <div>Now showing post {slug}</div>;
-}
-
-ReactDOM.render(
-  <Router>
-    <Switch>
-      <Route exact path="/">
-        <HomePage />
-      </Route>
-      <Route path="/blog/:slug">
-        <BlogPost />
-      </Route>
-    </Switch>
-  </Router>,
-  node
-);
-```
-
-#### redux
+## effect관련
+#### useEffect
 ```jsx
 const App = () => {
-  const counter = useSelector(state => state.counter);
-  const dispatch = useDispatch();
-  const setCount = useCallback(
-    (value) => dispatch(setCountAction(value)),
-    [dispatch],
+  useEffect(() => {
+    console.log(111);
+  }, []);
+  return (
+    <div>title</div>
   );
-  return <div>{counter}</div>;
-}
+};
+```
+
+#### useLayoutEffect
+```jsx
+const App = () => {
+  useLayoutEffect(() => {
+    console.log(111);
+  }, []);
+  return (
+    <div>title</div>
+  );
+};
+```
+
+#### useInsertionEffect
+```jsx
+const App = () => {
+  useInsertionEffect(() => {
+    console.log(111);
+  }, []);
+  return (
+    <div>title</div>
+  );
+};
+```
+
+#### useEffectEvent
+```jsx
+
+```
+
+## ref관련
+#### useRef
+```jsx
+
+```
+
+#### useImperativeHandle
+```jsx
+
+```
+
+## 성능관련
+#### useMemo
+```jsx
+const App = () => {
+  const title = useMemo(() => 'dao', []);
+  return (
+    <div>{title}</div>
+  );
+};
+```
+
+#### useCallback
+```jsx
+const App = () => {
+  const setTitle = useCallback(() => {
+    console.log(111);
+  }, []);
+  return (
+    <button type="button" onClick={setTitle}>+</button>
+  );
+};
+```
+
+#### useMemoCache
+```jsx
+
+```
+
+## 디버깅관련
+#### useDebugValue
+```jsx
+
+```
+
+## concurrent 동시성모드
+#### useTransition
+```jsx
+
+```
+
+#### useDeferredValue
+```jsx
+
+```
+
+#### useSyncExternalStore(useMutableSource)
+```jsx
+
+```
+
+## RSC(React Server Component)
+#### useId
+```jsx
+
+```
+
+#### use
+```jsx
+
+```
+
+#### useCacheRefresh
+```jsx
+
+```
+
+#### useOptimistic
+```jsx
+
+```
+
+#### useFormStatus(react-dom)
+```jsx
+
 ```
