--- a/docs/css/01.md
+++ b/docs/css/01.md
@@ -21,3 +21,17 @@ img {
   aspect-ratio: 0.5;
 }
 ```
+
+## all
+
+```css
+button {
+  width: 80px;
+  height: 80px;
+  all: unset;
+  /* padding: 0;
+  border: none;
+  outline: none;
+  background: none; */
+}
+```
