--- a/docs/react/03.md
+++ b/docs/react/03.md
@@ -38,7 +38,29 @@ function Counter() {
 
 #### useContext
 ```jsx
+import { createContext, useContext } from 'react';
 
+const Context = createContext({ theme: 'light' });
+
+const Child = () => {
+  const { theme } = useContext(Context);
+  return <>{theme}</>
+}
+
+const Parent = () => {
+  return <Child />
+}
+
+
+const App = () => {
+  return (
+    <Context.Provider value={{ theme: 'dark' }}>
+      <Parent />
+    </Context.Provider>
+  )
+}
+
+export default App;
 ```
 
 ## effect관련
@@ -86,7 +108,34 @@ const App = () => {
 ## ref관련
 #### useRef
 ```jsx
+import { useRef, forwardRef } from 'react';
 
+const Child = forwardRef((props: any, ref: any) => {
+  return <input ref={ref} />
+})
+
+const Parent = () => {
+  const inputRef = useRef<HTMLInputElement | null>(null);
+  const onClick = () => {
+    if (inputRef.current) {
+      inputRef.current.value = 'reset';
+    }
+  }
+  return (
+    <>
+      <Child ref={inputRef} />
+      <button onClick={onClick}>reset</button>
+    </>
+  )
+}
+
+const App = () => {
+  return (
+    <Parent />
+  )
+}
+
+export default App;
 ```
 
 #### useImperativeHandle
