--- a/docs/react/03.md
+++ b/docs/react/03.md
@@ -180,23 +180,110 @@ const App = () => {
 ## concurrent 동시성모드
 #### useTransition
 ```jsx
+const App = () => {
+  const [value, setValue] = useState('');
+  const [isPending, startTransition] = useTransition();
 
+  const onChange = (e: ChangeEvent<HTMLInputElement>) => {
+    // 긴급처리건.
+    setValue(e.target.value);
+    startTransition(() => {
+      // 후순위 처리.
+      setContent(e.target.value);
+    });
+  }
+  return (
+    <>
+      <input value={value} onChange={onChange} />
+      <div>{value.length}</div>
+    </>
+  )
+}
 ```
 
 #### useDeferredValue
 ```jsx
+const App = () => {
+  const [value, setValue] = useState('');
+  const lowValue = useDeferredValue(value.length);
 
+  const onChange = (e: ChangeEvent<HTMLInputElement>) => {
+    setValue(e.target.value)
+  }
+
+  return (
+    <>
+      <input value={value} onChange={onChange} />
+      <div>{lowValue}</div>
+    </>
+  )
+}
 ```
 
 #### useSyncExternalStore(useMutableSource)
 ```jsx
+// todoStore.js
+let nextId = 0;
+let todos = [{ id: nextId++, text: 'Todo #1' }];
+let listeners = [];
 
+export const todosStore = {
+  addTodo() {
+    todos = [...todos, { id: nextId++, text: 'Todo #' + nextId }]
+    emitChange();
+  },
+  subscribe(listener) {
+    listeners = [...listeners, listener];
+    return () => {
+      listeners = listeners.filter(l => l !== listener);
+    };
+  },
+  getSnapshot() {
+    return todos;
+  }
+};
+
+function emitChange() {
+  for (let listener of listeners) {
+    listener();
+  }
+}
+
+// App.jsx
+const App = () => {
+  const todos = useSyncExternalStore(todosStore.subscribe, todosStore.getSnapshot);
+  return (
+    <>
+      <button onClick={todosStore.addTodo}>Add todo</button>
+      <hr />
+      <ul>
+        {todos.map(todo => (
+          <li key={todo.id}>{todo.text}</li>
+        ))}
+      </ul>
+    </>
+  );
+}
 ```
 
 ## RSC(React Server Component)
 #### useId
 ```jsx
+// 여러번 불러오는 컴포넌트일 경우 아래와 같이 필요함.
+const App = () => {
+  const inputId = useId();
 
+  return (
+    <>
+      <input id={`${inputId}-firstName`} />
+      <input id={`${inputId}-lastName`} />
+    </>
+  )
+}
+// ssr일경우 생성한 id가 다른경우가 있음.
+// 1. 서버단 생성시 id="1" 생성
+// 2. <div id="1"></div>을 client에게 전달
+// 3. csr랭딩시 hydrate를 통해서 id="2" 로 처리.
 ```
 
 #### use
