--- a/docs/react/02.md
+++ b/docs/react/02.md
@@ -189,13 +189,13 @@ visible ? <About /> : <Main />
 </ul>
 // lastPlacedIndex = 0;
 // D가 oldChildNode에서의 index가 3임
-// 3 >= lastPlaceIndex 이니 이동이 필요 없음. lastPlaceIndex = 3으로 지정
+// 3 >= lastPlaceIndex 이므로 이동이 필요 없음. lastPlaceIndex = 3으로 지정
 // A가 oldChildNode에서의 index가 0임  
-// 0 < 3(lastPlaceIndex) 이니 맨뒤로 이동.
+// 1 < 3(lastPlaceIndex) 이므로 맨뒤로 이동.
 // B가 oldChildNode에서의 index가 1임  
-// 0 < 3(lastPlaceIndex) 이니 맨뒤로 이동.
+// 2 < 3(lastPlaceIndex) 이므로 맨뒤로 이동.
 // C가 oldChildNode에서의 index가 2임  
-// 0 < 3(lastPlaceIndex) 이니 맨뒤로 이동.
+// 2 < 3(lastPlaceIndex) 이므로 맨뒤로 이동.
 ```
 
 <br />
