--- a/docs/test/04.md
+++ b/docs/test/04.md
@@ -38,9 +38,49 @@
 - winrunner(IBM)
 - autoit
 
+#### 功能测试
+
+- jest(vitest)
+- Coverage
+- Unit Test
+- Integration Test (Module Integration Test)
+
+#### 界面测试
+
+- cypress
+- pupptter
+
+#### 易用性 - Easy of Use
+
+- 符合标准和规范
+- 直观
+- 一致
+- 灵活
+- 舒适
+- 正确
+- 实用
+
+#### 兼容性
+
+- 跨浏览器(包括手机端) **https://www.browserstack.com/**
+- 软件环境(版本环境)
+- 硬件环境
+- 系统环境
+
 #### 性能测试
 
 - loadrunner
+- lighthouse **https://developers.google.com/web/tools/lighthouse/**
+- pagespeed **https://developers.google.com/speed/pagespeed/insights/**
+
+```sh
+brew install wrk
+wrk -t12 -c400 -d30s http://127.0.0.1:8080/index.html
+
+npm install -g loadtest
+loadtest http://localhost:8054/test -t 20 -c 100
+```
+
 
 #### 接口测试
 
@@ -66,6 +106,7 @@
 - Scrawlr
 - Watcher
 - WebScrab
+- 授权测试
 
 #### 抓包
 
