--- a/docs/typescript/00.md
+++ b/docs/typescript/00.md
@@ -1,50 +1,62 @@
 # !1111
+
 #### 高阶函数
+
 #### 混合类型 Hybrid Types - 接口
-#### 泛型 
+
+#### 泛型
+
 #### 高级类型
+
 #### declare
 
-
 # !2222
+
 #### 类
+
 #### 类接口
+
 #### Exclude
+
 #### is
 
 # !3333
+
 #### enum
+
 #### namespace
 
-
-
 #### 类型推论 - Type Inference
+
 推断发生在初始化变量和成员，设置默认参数值和决定函数返回值时。
+
 #### 类型兼容性 - Type Compatibility
 
-
-
 ## let vs const
-依情况而定。 使用最小特权原则，所有变量除了你计划去修改的都应该使用const。 
+
+依情况而定。 使用最小特权原则，所有变量除了你计划去修改的都应该使用 const。
 
 ## const vs readonly
-最简单判断该用readonly还是const的方法是看要把它做为变量使用还是做为一个属性。 做为变量使用的话用 const，若做为属性则使用readonly。
+
+最简单判断该用 readonly 还是 const 的方法是看要把它做为变量使用还是做为一个属性。 做为变量使用的话用 const，若做为属性则使用 readonly。
 
 ## interface vs type
-- type은 컴파일돌릴때 명확한 위치를 찍어주지 않는다.  인터페이스는 인터페이스 명을 출력해준다.
-- type은 유니온 타입, 교차타입 등등 사용가능. 
 
+- type은 컴파일돌릴때 명확한 위치를 찍어주지 않는다. 인터페이스는 인터페이스 명을 출력해준다.
+- type은 유니온 타입, 교차타입 등등 사용가능.
 
 ## 泛型的使用场景
-##### 深度Partial
+
+##### 深度 Partial
+
 ```ts
 type Partial<T> = {
-    [P in keyof T]?: T[P];
+  [P in keyof T]?: T[P];
 };
 
 type DeepPartial<T> = {
   [P in keyof T]?: T[P] extends Object ? DeepPartial<T[P]> : T[P];
-}
+};
 
 type Person = {
   name: string;
@@ -53,22 +65,33 @@ type Person = {
     email: string;
     phone: number;
     wechat: string;
-  }
-}
+  };
+};
 type PartialPerson = Partial<Person>;
 let partialPerson: PartialPerson = {
-  name: 'tom'
+  name: "tom",
 };
 ```
 
-#### 更智能的array_column函数
+#### 更智能的 array_column 函数
+
 ```ts
 type Person = {
   name: string;
   age: number;
-}
+};
 const persons: Person[] = [];
 function array_column<T, K extends keyof T>(input: T[], key: K) {
-  return input.map(item => item[key])
+  return input.map((item) => item[key]);
 }
 ```
+
+#### TS缺点
+
+- 类型系统过于强大但又有限制
+- 类型代码比实际代码还多
+- 学习曲线， 使用成本
+- 并不是JS
+- 子集而不是超集(不同的编译选项可认为是不同的子集)
+- 仅仅是type checker
+- 类型信息不能用来提升性能
