--- a/docs/javascript/pattern/behavioral/13.md
+++ b/docs/javascript/pattern/behavioral/13.md
@@ -2,31 +2,22 @@
 通过为多个对象提供处理请求的机会，避免将请求的发送者耦合到其接收者。 链接接收对象并沿链传递请求，直到对象处理它。 
 
 ```js
-class Craps {
-  constructor() {
-    this.count = 1;
-    this.get = this.get.bind(this);
+class Request {
+  constructor(amount){
+    this.amount = amount;
+    console.log("Requested: $" + amount + "\n");
   }
-  get() {
-    return Math.floor(Math.random() * 6) + Math.floor(Math.random() * 6) + 2;
-  }
-  getBig() {
-    let tg = this.get();
-    while (tg < 9) {
-      tg = this.get();
-      this.count++;
-    }
-    return {
-      tg,
-      count: this.count,
-    }
+
+  get(bill){
+    const count = Math.floor(this.amount / bill);
+    this.amount -= count * bill;
+    console.log("Dispense " + count + " $" + bill + " bills");
+    return this;
   }
 }
-
-export default Craps;
 ```
 
 ```js
-let craps = new Craps()
-craps.getBig()
+const request = new Request(378);
+request.get(100).get(50).get(20).get(10).get(5).get(1);
 ```
